--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ paginate: 5
 navigation:
  - title: Home
    url: /index.html
- - title: About
-   url: /about
+ - title: Syllabus
+   url: /syllabus.html
  - title: Contact
-   url: /contact
+   url: /contact.html
 
 social:
    github: lukejharmon
