--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,10 @@ navigation:
    url: /index.html
  - title: Syllabus
    url: /syllabus.html
+ - title: Lecture
+   url: /schedule.html
+ - title: Lab
+   url: /labSchedule.html
  - title: Contact
    url: /contact.html
 
