--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ description: Herpetology at the University of Idaho Fall 2015
 
 url: http://lukejharmon.github.io/herpclass/
 baseurl: "/herpclass"
+pagenate: 5
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
 
@@ -28,3 +29,5 @@ social:
    email: lukeh@uidaho.edu
 
 google_analytics: ""
+
+gems: [jekyll-paginate]
