--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ pagenate: 5
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
 
-highlighter: pygments
+highlighter: rouge
 paginate: 5
 
 navigation:
